Date: Tue, 18 Jan 2022 16:29:05 +0000
Mime-Version: 1.0 (Produced by PhpWiki 1.6.0)
Content-Type: application/x-phpwiki;
  pagename=ReleaseNotes;
  flags=PAGE_LOCKED;
  charset=UTF-8
Content-Transfer-Encoding: binary

<<CreateToc with_toclink||=1 headers||=1,2,3 width=300px position=right>>

== 1.6.1 2022-01-XX Marc-Etienne Vargenau ==

This release makes ~PhpWiki compatible with PHP 8.1.
##READONLY## is renamed as ##ISREADONLY##, since ##readonly## is now a keyword in PHP 8.1.

=== Fixes ===
* Make list of pages work with PDO (~AllPages, ~MostPopular...).
* Better handling of theme change in ~UserPreferences.
* In DATABASE_TYPE = file, do not update metadata if page does not exist (reported by Harold Hallikainen).
* blog theme improved.

=== Changes ===
* Warn user that leaving the page will lose modifications.
* TOOLBAR_IMAGE_PULLDOWN is true by default.
* Remove ADODB DATABASE_TYPE. Use SQL (Pear) or PDO.
* Add “Rename” tab in Sidebar theme.
* Page locking and unlocking is now saved in page history (in Edit mode).
* Add sample images for ~PhotoAlbum in blog theme.
* Remove EDITING_POLICY
* Remove ENABLE_XHTML_XML
* Remove USECACHE, always true
* More translations

=== Plugins ===
* Chart plugin: new argument “legend”
* UpLoad plugin: allow more filenames (e.g. with Chinese characters)
* ~PreferencesInfo plugin removed
* ~CategoryPage plugin removed, categories are better created with the button in the toolbar

== 1.6.0 2021-08-12 Marc-Etienne Vargenau ==

Major release:
* PHP 7 and 8 compatible (works from PHP 5.3.3 to PHP 8.0)
* Full HTML 5: Add HTML 5 <main> <header> <footer> <nav> in all themes. Add ARIA roles.
* Flash is dead
* Internet Explorer is dead

=== Fixes ===
* Make function IsSafeURL more strict
* Make XHTML ZIP Snapshot work again (broken since ~PhpWiki 1.5.3)
* It was possible to rename a page to a name with illegal characters, like ~[~]
* Better handling of page names with slash