@@ -1,4 +1,4 @@
-Date: Tue, 18 Jan 2022 16:29:05 +0000
+Date: Tue, 18 Jan 2022 16:58:09 +0000
 Mime-Version: 1.0 (Produced by PhpWiki 1.6.0)
 Content-Type: application/x-phpwiki;
   pagename=ReleaseNotes;
@@ -17,6 +17,7 @@ This release makes ~PhpWiki compatible with PHP 8.1.
 * Make list of pages work with PDO (~AllPages, ~MostPopular...).
 * Better handling of theme change in ~UserPreferences.
 * In DATABASE_TYPE = file, do not update metadata if page does not exist (reported by Harold Hallikainen).
+* Make the toolbar image button work when ##UPLOAD_USERDIR## is set.
 * blog theme improved.
 
 === Changes ===
